aCCESIBILIDAD, CORRECION COLORES

--- a/contacto.html
+++ b/contacto.html
@@ -30,14 +30,14 @@
 </section>  
 
 <header class="hheader">
-    <a href="index.html"><img src="images/iconoprincipal.png"></a>
+    <a href="index.html"><img src="images/iconoprincipal.png" alt=""></a>
 
     <nav>
         <ul>
-            <li><a href="sobrenosotros.html">Sobre nosotros</a> </li>
+            <li><a href="sobrenosotros.html" >Sobre nosotros</a> </li>
             <li><a href="productos.html">Productos</a></li>
             <li><a href="puntos-venta.html">Puntos de venta</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="contacto.html" id="focus">Contacto</a></li>
         </ul>
     </nav>
 </header>
@@ -102,7 +102,7 @@ Jaen</p>
             </div>
             
             <div class="mapa-container">
-                <iframe tabindex="-1" title="Ubicación de la panificadora Productos Andupan en Andújar"></iframe> src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.3357916802315!2d-4.040685100067618!3d38.03926144392763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6c37ac5197d0f5%3A0xde578ed076b36afb!2sPRODUCTOS%20ANDUPAN%20S.L.!5e0!3m2!1ses!2ses!4v1765322712441!5m2!1ses!2ses" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe tabindex="-1" title="Ubicación de la panificadora Productos Andupan en Andújar" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.3357916802315!2d-4.040685100067618!3d38.03926144392763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6c37ac5197d0f5%3A0xde578ed076b36afb!2sPRODUCTOS%20ANDUPAN%20S.L.!5e0!3m2!1ses!2ses!4v1765322712441!5m2!1ses!2ses" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
         
