--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -35,7 +35,7 @@
 
     <nav>
         <ul>
-            <li><a href="sobrenosotros.html">Sobre nosotros</a> </li>
+            <li><a href="sobrenosotros.html" id="focus">Sobre nosotros</a> </li>
             <li><a href="productos.html">Productos</a></li>
             <li><a href="puntos-venta.html">Puntos de venta</a></li>
             <li><a href="contacto.html">Contacto</a></li>
