--- a/puntos-venta.html
+++ b/puntos-venta.html
@@ -36,7 +36,7 @@
         <ul>
             <li><a href="sobrenosotros.html">Sobre nosotros</a> </li>
             <li><a href="productos.html">Productos</a></li>
-            <li><a href="puntos-venta.html">Puntos de venta</a></li>
+            <li><a href="puntos-venta.html" id="focus">Puntos de venta</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
@@ -64,8 +64,8 @@
             <p class="direccion">C. la Palma, 19, 23740</p>
             <p class="poblacion">Andújar, Jaén</p>
             <strong>Contacto:</strong>
-            <p class="tlf"><img src="images/tlf.png">636 547 129</p>
-            <p class="tlf"><img src="images/tlf.png">950 457 412</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">636 547 129</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">950 457 412</p>
         </div>
     </div>
 
@@ -78,8 +78,8 @@
             <p class="direccion">C. el Pino, 36, 23740</p>
             <p class="poblacion">Andújar, Jaén</p>
             <strong>Contacto:</strong>
-            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
-            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">953 587 412</p>
         </div>
     </div>
 
@@ -92,8 +92,8 @@
             <p class="direccion">C. el Pino, 36, 23740</p>
             <p class="poblacion">Andújar, Jaén</p>
             <strong>Contacto:</strong>
-            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
-            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">953 587 412</p>
         </div>
     </div>
 
@@ -106,8 +106,8 @@
             <p class="direccion">C. el Pino, 36, 23740</p>
             <p class="poblacion">Andújar, Jaén</p>
             <strong>Contacto:</strong>
-            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
-            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">953 587 412</p>
         </div>
     </div>
 
@@ -120,8 +120,8 @@
             <p class="direccion">C. el Pino, 36, 23740</p>
             <p class="poblacion">Andújar, Jaén</p>
             <strong>Contacto:</strong>
-            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
-            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">953 587 412</p>
         </div>
     </div>
 
@@ -134,8 +134,8 @@
             <p class="direccion">C. el Pino, 36, 23740</p>
             <p class="poblacion">Andújar, Jaén</p>
             <strong>Contacto:</strong>
-            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
-            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">953 587 412</p>
         </div>
     </div>
 
@@ -154,8 +154,8 @@
             <p class="direccion">C. la Palma, 19, 23740</p>
             <p class="poblacion">Andújar, Jaén</p>
             <strong>Contacto:</strong>
-            <p class="tlf"><img src="images/tlf.png">636 547 129</p>
-            <p class="tlf"><img src="images/tlf.png">950 457 412</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">636 547 129</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">950 457 412</p>
         </div>
     </div>
 
@@ -168,8 +168,8 @@
             <p class="direccion">C. el Pino, 36, 23740</p>
             <p class="poblacion">Andújar, Jaén</p>
             <strong>Contacto:</strong>
-            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
-            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">953 587 412</p>
         </div>
     </div>
 
@@ -182,8 +182,8 @@
             <p class="direccion">C. el Pino, 36, 23740</p>
             <p class="poblacion">Andújar, Jaén</p>
             <strong>Contacto:</strong>
-            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
-            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">953 587 412</p>
         </div>
     </div>
 
@@ -196,8 +196,8 @@
             <p class="direccion">C. el Pino, 36, 23740</p>
             <p class="poblacion">Andújar, Jaén</p>
             <strong>Contacto:</strong>
-            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
-            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">953 587 412</p>
         </div>
     </div>
 
@@ -210,8 +210,8 @@
             <p class="direccion">C. el Pino, 36, 23740</p>
             <p class="poblacion">Andújar, Jaén</p>
             <strong>Contacto:</strong>
-            <p class="tlf"><img src="images/tlf.png">666 547 859</p>
-            <p class="tlf"><img src="images/tlf.png">953 587 412</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">666 547 859</p>
+            <p class="tlf"><img alt="" src="images/tlf.png">953 587 412</p>
         </div>
     </div>
 
